--- a/blog.html
+++ b/blog.html
@@ -37,6 +37,16 @@
                     assigned to that particular tab.</p>
             </div>
         </article>
+        <article class="blog mb-3">
+            <div class="blog-body p-5">
+                <h5 class="blog-title fw-bold fs-4 text-center mb-4">Difference between global function and block scope.
+                </h5>
+                <p class="blog-text fs-5">A block is a piece of code inside a set of curly braces {} and groups code
+                    statements together. An example of a block could be a function, like this: The Global scope. A
+                    variable exists inside or outside a block. If a variable is declared outside all functions or curly
+                    braces ({}), it exists in the global scope.</p>
+            </div>
+        </article>
 
     </div>
 
