--- a/blog.html
+++ b/blog.html
@@ -22,10 +22,10 @@
             <a href="index.html"><img src="./logo.png" /></a>
         </div>
     </div>
-    <h1 class="text-center m-5 text-light">Welcome to <span class="text-success">Debugging Blog</span></h1>
+    <h1 class="text-center m-5 text-warning">Welcome to <span class="text-info">Programming Blog</span></h1>
     <!-- Blog start -->
     <div class="container">
-        <article class="blog mb-3">
+        <article class="blog mb-4">
             <div class="blog-body p-5">
                 <h5 class="blog-title fw-bold fs-4 text-center mb-4">Difference between local storage and session
                     storage
@@ -37,14 +37,40 @@
                     assigned to that particular tab.</p>
             </div>
         </article>
-        <article class="blog mb-3">
+        <article class="blog mb-4">
             <div class="blog-body p-5">
-                <h5 class="blog-title fw-bold fs-4 text-center mb-4">Difference between global function and block scope.
+                <h5 class="blog-title fw-bold fs-4 text-center mb-4">Difference between global scope and block scope.
                 </h5>
                 <p class="blog-text fs-5">A block is a piece of code inside a set of curly braces {} and groups code
                     statements together. An example of a block could be a function, like this: The Global scope. A
                     variable exists inside or outside a block. If a variable is declared outside all functions or curly
                     braces ({}), it exists in the global scope.</p>
+            </div>
+        </article>
+        <article class="blog mb-4">
+            <div class="blog-body p-5">
+                <h5 class="blog-title fw-bold fs-4 text-center mb-4">Explain how JavaScripts event loop works.</h5>
+                <p class="blog-text fs-5">Event loop is an endless loop, which waits for tasks, executes them and then
+                    sleeps until it receives more tasks. The event loop executes tasks from the event queue only when
+                    the call stack is empty i.e. there is no ongoing task. The event loop allows us to use callbacks and
+                    promises.</p>
+            </div>
+        </article>
+        <article class="blog mb-4">
+            <div class="blog-body p-5">
+                <h5 class="blog-title fw-bold fs-4 text-center mb-4">How many ways to get undefined value in javascript?
+                </h5>
+                <p class="fw-bold fs-5">8 Ways to get Undefined:</p>
+                <ul class="blog-text fs-5">
+                    <li>A declared variable without assigning any value to it.</li>
+                    <li>Implicit returns of functions due to missing return statements.</li>
+                    <li>Return statements that do not explicitly return anything.</li>
+                    <li>Lookups of non-existent properties in an object.</li>
+                    <li>Function parameters that have not passed.</li>
+                    <li>Anything that has been set to the value of undefined.</li>
+                    <li>Any expression in the form of void(expression)</li>
+                    <li>The value of the global variable undefined</li>
+                </ul>
             </div>
         </article>
 
